# intentproof-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  conformance-certificate.json  conformance-report.json  docker-compose.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  conformance-attestation.yml  docker-ecr-release.yml  spec-conformance.yml  typos.yml
alembic/: env.py
alembic/versions/: 20260509_0001_initial_execution_events.py  20260509_0002_proof_ingest_outbox.py
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  verification_queue.py
examples/: README.md  curl_ingest_event.sh  curl_query_correlation.sh  http_utils.py  python_print_http_status.py  python_sdk_http_exporter.py
scripts/: check-spec-pin.sh  docker-entrypoint.sh  generate_spec_models.py  publish_outbox.py  smoke.sh  spec-conformance.sh  verify-generated-models.sh
tests/: test_api.py  test_verification_queue.py
