[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentproof-api"
version = "0.1.0"
description = "IntentProof API ingestion and query service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "coverage[toml]>=7.6.0",
  "datamodel-code-generator==0.57.0",
  "httpx>=0.27.0",
  "pre-commit>=3.8.0",
  "ruff>=0.6.0",
  "tox>=4.20.0",
]

[project.urls]
Homepage = "https://github.com/IntentProof/intentproof-api"
Repository = "https://github.com/IntentProof/intentproof-api"
Issues = "https://github.com/IntentProof/intentproof-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Must match intentproof-spec spec.json version + the spec checkout HEAD — enforced by scripts/check-spec-pin.sh
[tool.intentproof]
spec-version = "spec-v2.0.1"
spec-commit = "89a731fb02144c817aaaef289fcb2b56d032b191"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source_pkgs = ["app"]
branch = false
omit = [
  ".tox/*",
  "app/generated/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["app/generated"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
